--- a/NavTrajSampleGeneration/L3MVN/envs/habitat/configs/tasks/objectnav_cloudrobo_v1.yaml
+++ b/NavTrajSampleGeneration/L3MVN/envs/habitat/configs/tasks/objectnav_cloudrobo_v1.yaml
@@ -28,13 +28,14 @@ SIMULATOR:
     MIN_DEPTH: 0.5
     MAX_DEPTH: 5.0
     POSITION: [0, 0.88, 0]
-  SCENE_DATASET: "data/scene_datasets/hm3d/hm3d_annotated_basis.scene_dataset_config.json"
+  SCENE_DATASET: "data/scene_datasets/cloudrobo_v1/cloudrobo_v1_annotated_basis.scene_dataset_config.json"
 TASK:
   TYPE: ObjectNav-v1
   POSSIBLE_ACTIONS: ["STOP", "MOVE_FORWARD", "TURN_LEFT", "TURN_RIGHT", "LOOK_UP", "LOOK_DOWN"]
   SENSORS: ['OBJECTGOAL_SENSOR', 'GPS_SENSOR', 'COMPASS_SENSOR']
   GOAL_SENSOR_UUID: objectgoal
-  MEASUREMENTS: ['DISTANCE_TO_GOAL', 'SUCCESS', 'SPL']
+  MEASUREMENTS: ['DISTANCE_TO_GOAL', 'SUCCESS', 'SPL', 'TOP_DOWN_MAP']
+    #MEASUREMENTS: ['DISTANCE_TO_GOAL', 'SUCCESS', 'SPL']
   DISTANCE_TO_GOAL:
     DISTANCE_TO: VIEW_POINTS
   SUCCESS:
@@ -42,7 +43,6 @@ TASK:
 
 DATASET:
   TYPE: ObjectNav-v1
-  SPLIT: val
-  DATA_PATH: "data/task_datasets/objectnav/hm3d_v1/{split}/{split}.json.gz"
+  SPLIT: train
+  DATA_PATH: "data/task_datasets/objectnav/cloudrobo_v1/{split}/{split}.json.gz"
   SCENES_DIR: "data/scene_datasets"
-
