--- a/NavTrajSampleGeneration/L3MVN/envs/habitat/configs/tasks/objectnav_hm3d_v1_hd.yaml
+++ b/NavTrajSampleGeneration/L3MVN/envs/habitat/configs/tasks/objectnav_hm3d_v1_hd.yaml
@@ -34,7 +34,7 @@ TASK:
   POSSIBLE_ACTIONS: ["STOP", "MOVE_FORWARD", "TURN_LEFT", "TURN_RIGHT", "LOOK_UP", "LOOK_DOWN"]
   SENSORS: ['OBJECTGOAL_SENSOR', 'GPS_SENSOR', 'COMPASS_SENSOR']
   GOAL_SENSOR_UUID: objectgoal
-  MEASUREMENTS: ['DISTANCE_TO_GOAL', 'SUCCESS', 'SPL']
+  MEASUREMENTS: ['DISTANCE_TO_GOAL', 'SUCCESS', 'SPL', 'TOP_DOWN_MAP']
   DISTANCE_TO_GOAL:
     DISTANCE_TO: VIEW_POINTS
   SUCCESS:
@@ -43,6 +43,6 @@ TASK:
 DATASET:
   TYPE: ObjectNav-v1
   SPLIT: val
-  DATA_PATH: "data/task_datasets/objectnav/hm3d_v1/{split}/{split}.json.gz"
+  DATA_PATH: "data/task_datasets/objectnav/hm3d_v1_hd/{split}/{split}.json.gz"
   SCENES_DIR: "data/scene_datasets"
 
